--- a/css/main.css
+++ b/css/main.css
@@ -137,12 +137,15 @@ footer {
 .menu-sticky {
   position: -webkit-sticky;
   position: sticky;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   top: 0px;
-  width: 100%;
   height: 30px;
   background-color: #333;
   color: #333;
-  text-align: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   line-height: 30px;
   font-size: 18px;
 }
@@ -225,5 +228,10 @@ footer {
 .main-box-bootstrap {
   background: #71b157;
   background: linear-gradient(135deg, #ffce95 0%, #fdff7e 100%);
+}
+
+.main-box-git {
+  background: #ffeb85;
+  background-image: linear-gradient(319deg, #ffefa1 0%, #94b8ff 37%, #d6bdfc 100%);
 }
 /*# sourceMappingURL=main.css.map */
