--- a/sass/main.sass
+++ b/sass/main.sass
@@ -94,12 +94,12 @@ footer
 
 .menu-sticky
     position: sticky
+    display: flex
     top: 0px
-    width: 100%
     height: 30px
     background-color: #333
     color: #333
-    text-align: center
+    justify-content: space-around
     line-height: 30px
     font-size: 18px
     @include list-menu
@@ -147,9 +147,11 @@ footer
 .main-box-vscode
     background: rgb(113, 177, 87)
     background: linear-gradient(135deg, rgba(0, 204, 255, 1) 0%, rgba(0, 255, 115, 1) 100%)
-   
+
 .main-box-bootstrap
     background: rgb(113, 177, 87)
     background: linear-gradient(135deg, #ffce95 0%, #fdff7e 100%)
 
-
+.main-box-git
+    background: #ffeb85
+    background-image: linear-gradient(319deg, #ffefa1 0%, #94b8ff 37%, #d6bdfc 100%)
