delete files ang change files
delete files javascript. html & javascripts2.html

change several files html and css/sass

--- a/css/main.css
+++ b/css/main.css
@@ -200,12 +200,12 @@ footer {
   background: linear-gradient(135deg, #00ccff 0%, #00ff73 100%);
 }
 
-.main-box-js {
+.main-box-links {
   background: #71b157;
-  background: linear-gradient(135deg, #00ccff 0%, #ff0037 100%);
+  background: linear-gradient(135deg, #00ccff 0%, #1ac1c7 100%);
 }
 
-.main-box-js li {
+.main-box-links li {
   padding: 0 30px;
   line-height: 1.5;
 }
