--- a/sass/main.sass
+++ b/sass/main.sass
@@ -132,9 +132,9 @@ footer
     background: rgb(113, 177, 87)
     background: linear-gradient(135deg, rgba(0, 204, 255, 1) 0%, rgba(0, 255, 115, 1) 100%)
 
-.main-box-js
+.main-box-links
     background: rgb(113, 177, 87)
-    background: linear-gradient(135deg, #00ccff 0%, #ff0037 100%)
+    background: linear-gradient(135deg, #00ccff 0%, #1ac1c7 100%)
     li
         padding: 0 30px
         line-height: 1.5
